--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "memory_game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nishithingu.github.io/memory-game",
+  "homepage": "https://nishithingu.github.io/Memory-game-React/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
